project2/test/test_11713020_5.out
Error type 1 at Line 8: undefined variable: b
Error type 5 at Line 8: unmatching type on both sides of assignment
