project2/test/test_11713020_5.spl
struct Apple
{
  int weight;
};
int test_11713020_5()
{
  struct Apple aa;
  aa.weight = b;
}